<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent" android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/bottom_navbar_size">
    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:background="@color/backgroundDark">

        <RelativeLayout
                android:id="@+id/statf_container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:background="@drawable/container_border_shadow"
                android:padding="10dp">
            <TextView
                    android:id="@+id/statfheader1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statf_header1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_alignParentTop="true"/>
            <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/backgroundDark"
                    android:layout_below="@id/statfheader1"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:divider="@color/backgroundDark"
                    android:showDividers="middle"
                    android:layout_below="@id/divider1"
                    android:layout_alignParentBottom="true">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:text="@string/statf_totaltask"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/statfinterval"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            tools:text="999999999999999999"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:text="@string/statf_done"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/statfdone"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            tools:text="999999999999999999"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:text="@string/statfskiplabel"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/statfskip"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            tools:text="999999999999999999"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:text="@string/statf_totalhour"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/statfhour"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            tools:text="999999999999999999"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/statf_container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/container_border_shadow">
            <TextView
                    android:id="@+id/statfheader2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statf_header2"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_alignParentTop="true"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/backgroundDark"
                    android:layout_below="@id/statfheader2"/>
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/statf_tab1"
                    app:tabRippleColor="@android:color/transparent"
                    app:tabSelectedTextColor="@color/colorPrimaryDark"
                    app:tabMode="scrollable"
                    app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:tabIndicator="@drawable/tab_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider2">

            </com.google.android.material.tabs.TabLayout>

            <!--<TextView-->
            <!--android:id="@+id/statfselectdate1label"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/statf_selectdate1"-->
            <!--android:layout_below="@+id/statfselecttasklabel"/>-->
            <!--<TextView-->
            <!--android:id="@+id/statfselectdate1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignTop="@+id/statfselectdate1label"-->
            <!--android:layout_toEndOf="@+id/statfselecttasklabel"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginEnd="10dp"-->
            <!--tools:text="25/01/1999"/>-->
            <!--<TextView-->
            <!--android:id="@+id/statfselectdate2label"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/statf_selectdate2"-->
            <!--android:layout_below="@id/statfselecttasklabel"-->
            <!--android:layout_toEndOf="@id/statfselectdate1"/>-->
            <!--<TextView-->
            <!--android:id="@+id/statfselectdate2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignTop="@+id/statfselectdate1label"-->
            <!--android:layout_toEndOf="@+id/statfselectdate2label"-->
            <!--android:layout_alignEnd="@id/statfselecttask"-->
            <!--android:layout_marginStart="20dp"-->
            <!--tools:text="19/07/2019"/>-->

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/statf_tab2"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/tab_size"
                    android:layout_below="@id/statf_tab1"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/tab_background"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabIndicator="@drawable/tab_indicator"
                    app:tabRippleColor="@android:color/transparent">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statf_sort1"/>

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statf_sort2"/>

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statf_sort3"/>
            </com.google.android.material.tabs.TabLayout>
            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/statfhistory_bar"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_below="@id/statf_tab2" android:layout_marginTop="-7dp"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/statf_container3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/container_border_shadow">
            <TextView
                    android:id="@+id/statfheader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statf_header3"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_alignParentTop="true"/>
            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/backgroundDark"
                    android:layout_below="@id/statfheader3"/>
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/statf_tab3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider3">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statf_distselect1"/>

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statf_distselect2"/>

            </com.google.android.material.tabs.TabLayout>
            <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/sdistribtion_pie"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_below="@id/statf_tab3"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>